# build-rust-deb-action

./: README.md  action.yml
.github/workflows/: test.yml
scripts/: build_packages  install_build_deps  run
test/: Cargo.toml
